--- a/style.css
+++ b/style.css
@@ -1,7 +1,71 @@
+* {
+    margin: 0;
+    padding: 0;
+}
 body{
-    background-color: red;
+    height: 100vh;              /* altura total da tela */
+    display: flex;              /* ativa flexbox no body */
+    justify-content: center;    /* centraliza horizontalmente */
+    align-items: center;        /* centraliza verticalmente */
+    
+    background-image: url('fundo.webp'); 
+    background-size: cover;        
+    background-repeat: no-repeat;   
+   
+    background-color: rgb(0, 0, 0);
+}
+/* Container principal */
+#container {
+    display: flex;
+    background-color: rgba(24, 28, 48, 0.788);
+    border-radius: 23px;
+    max-width: 1200px;
+    max-height: 800px;
+    margin:auto;
+    padding: 40px;
+
+    display: flex;
+    justify-content: center; /* centraliza na horizontal */
+    align-items: center;     /* centraliza na vertical */
+
+
+    
 }
 
-p{
-    color: blue;
+
+.row {
+    display: flex;
+    flex-wrap: wrap; 
+   
+    justify-content: center; 
 }
+img{
+    width: 200px;
+    height:200px;
+    
+}
+section:hover{
+    opacity: 100%;
+     filter:grayscale(0);
+}
+section{
+    margin: 14px;
+    padding: 10px;
+    background-color: rgba(44, 47, 228, 0.918);
+       opacity: 100%;
+     filter:grayscale(100%);
+     filter: hue-rotate(23px);
+     border-radius: 2px;
+
+}
+section > p{
+    text-align: center;
+    font-size: 30;
+    color: white;
+    font-weight: bold;
+     
+      
+}
+
+
+
